# bdpt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  reindex.py
headers/: Queue.hpp  intersection.hpp  loadObj.hpp  structs.hpp
objs/: cornell_box.mtl
src/: intersection.cpp  loadObj.cpp
src/Camera/: Camera.h
src/Materials/: Shaders.h  UniformBuffers.h
src/Objects/: BVH.h  Mesh.h  Model.h  Shape.h
src/Scene/: Scene.h
